<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nav_back_arrow_cont_desc">Go back</string>
    <string name="nav_close_cont_desc">Close</string>
</resources>

